--- a/settings.json
+++ b/settings.json
@@ -7,19 +7,19 @@
 	"prefix": "..",
 	"token": "",
 	"insults-module":{
-	"racial_insults": "Hold on, I think your master is coming", "https://tenor.com/view/get-to-work-work-simpsons-smithers-trendizisst-gif-15496843"],
+	"racial_insults": ["Hold on, I think your master is coming", "https://tenor.com/view/get-to-work-work-simpsons-smithers-trendizisst-gif-15496843"],
 	"young_insults": ["STFU you virgin", "Shut up you don't know what pussy looks like", "Here you little bitch, this is what titties look like \n https://tenor.com/view/bounce-wink-boobs-gif-14988779", "Shut up you closeted virgin and go see some IRL pussy for once"],
 	"fat_insults": ["Shut up fat ass, go get ya 15th McChicken of the day \n https://www.mcdonalds.com/us/en-us/product/mcchicken.html"],
 	"tuff_girl": [""],
 	"canadian_insults": [""],
 	"weeb_insults": [""],
 	"old_insults": [""],
-	"mr_clean": ["Whoa calm down WalMart Johhny Sins, don't you have some kids to be raping?"],
+	"mr_clean": ["Whoa calm down WalMart Johhny Sins?"],
 	"biden_jokes": [""],
 	"trump_jokes": [""],
 	"feminist_jokes": [""],
 	"gay_jokes": [""],
-	"homopho_jokes": ["Why you scared of a fag bud? What are they gonna do, fuck you?"],
+	"homopho_jokes": ["Why you scared of a gay guy bud? What are they gonna do, fuck you?"],
 	"railing_birds": ["You get any good kills last night?", "How's it going beauty?"],
 	"retard_jokes": [""]
 	}
