--- a/settings.json
+++ b/settings.json
@@ -2,8 +2,8 @@
 	"prefix": "..",
 	"token": "",
 	"insults-module":{
-	"racial_insults": ["Hold on, I think your master is coming", "https://tenor.com/view/get-to-work-work-simpsons-smithers-trendizisst-gif-15496843"],
-	"young_insults": ["STFU you virgin", "Shut up you don't know what pussy looks like", "Here you little bitch, this is what titties look like \n https://tenor.com/view/bounce-wink-boobs-gif-14988779", "Shut up you closeted virgin and go see some IRL pussy for once"],
+	"racial_insults": ["yes"],
+	"young_insults": ["STFU you 12 year old"],
 	"fat_insults": ["Shut up fat ass, go get ya 15th McChicken of the day \n https://www.mcdonalds.com/us/en-us/product/mcchicken.html"],
 	"tuff_girl": [""],
 	"canadian_insults": [""],
